--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 		<p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
 	<ol>
-		<li>&nbsp;We can reduce the time taken to run the program and increase the space occupied</li>
+		<li>We can reduce the time taken to run the program and increase the space occupied</li>
 <!-- 		<br> -->
 		<li>We can reduce the memory usage of the program and increase it’s total run time</li>
 		<li>&nbsp;We can reduce both time and space complexity by deploying relevant algorithms</li>
